--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  
+
   <title>Huddle landing page with curved sections</title>
 
   <!-- google fonts -->
@@ -13,34 +14,35 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
     rel="stylesheet">
 
-    <!-- style files -->
-    <link rel="stylesheet" href="css/main.css">
+  <!-- style files -->
+  <link rel="stylesheet" href="css/main.css">
 
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/c0510468b5.js" crossorigin="anonymous"></script>
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/c0510468b5.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
   <!-- start landing -->
 
-  <div class="landing">
+  <div class="landing fade-in">
+    <div class="nav flex nav-scroll">
+      <img src="images/logo.svg" alt="logo">
+      <button>Try it free</button>
+    </div>
     <div class="container">
-      <div class="nav flex">
-        <img src="images/logo.svg" alt="logo">
-        <button>Try it free</button>
-      </div>
       <h2>Build The Community Your Fans Will Love</h2>
-      <p>Huddle re-imagines the way we build communities. You have a <br> voice, but so does
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does
         your audience. Create connections with your <br> users as you engage in genuine discussion.</p>
-        <button class="my-btn">Get Started For Free</button>
+      <button class="my-btn">Get Started For Free</button>
       <img class="my-img" src="images/screen-mockups.svg" alt="screen-mockups">
       <div class="numbers flex">
-        <div class="box">
+        <div class="box fade-in">
           <img src="images/icon-communities.svg" alt="icon-communities">
           <h3>1.4k+</h3>
           <p>Communities Formed</p>
         </div>
-        <div class="box">
+        <div class="box fade-in">
           <img src="images/icon-messages.svg" alt="icon-messages">
           <h3>2.7m+</h3>
           <p>Messages Sent</p>
@@ -54,51 +56,51 @@
   <!-- start grow -->
 
   <div class="grow">
-    <div class="container flex">
+    <div class="container flex fade-in from-left">
       <div class="text">
         <h3>Grow Together</h3>
         <p>Generate meaningful discussions with your audience and build a strong, loyal community.
-        Think of the insightful conversations you miss out on with a feedback form.</p>
+          Think of the insightful conversations you miss out on with a feedback form.</p>
       </div>
       <img src="images/illustration-grow-together.svg" alt="illustration-grow-together">
     </div>
   </div>
-  
+
   <!-- end grow -->
 
   <!-- start flowing -->
-  
+
   <div class="flowing">
-    <div class="container flex">
-            <img src="images/illustration-flowing-conversation.svg" alt="illustration-flowing-conversation">
+    <div class="container flex fade-in from-right">
+      <img src="images/illustration-flowing-conversation.svg" alt="illustration-flowing-conversation">
       <div class="text">
         <h3>Flowing Conversations</h3>
         <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have
-        just-in-time loading for a more natural flow.</p>
+          just-in-time loading for a more natural flow.</p>
       </div>
     </div>
   </div>
-  
+
   <!-- end flowing -->
 
   <!-- start users -->
-  
+
   <div class="users">
-    <div class="container flex">
+    <div class="container flex fade-in from-left">
       <div class="text">
         <h3>Your Users</h3>
         <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means,
-        once signed in to your app, your users can start chatting immediately.</p>
+          once signed in to your app, your users can start chatting immediately.</p>
       </div>
       <img src="images/illustration-your-users.svg" alt="illustration-your-users">
     </div>
   </div>
-  
+
   <!-- end users -->
 
   <!-- start join-us -->
 
-  <div class="join-us">
+  <div class="join-us fade-in">
     <div class="container">
       <h2>Ready To Build Your Community?</h2>
       <button>Get Started For Free</button>
@@ -108,12 +110,12 @@
   <!-- end join-us -->
 
   <!-- start footer -->
-  
+
   <div class="footer">
     <div class="container flex">
       <div class="text">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
-        vestibulum a, ultrices quis sem.</p>
+          vestibulum a, ultrices quis sem.</p>
         <span><img src="images/icon-email.svg" alt="icon-email"> Phone: +1-543-123-4567</span>
         <span><img src="images/icon-phone.svg" alt="icon-phone">example@huddle.com</span>
         <ul>
@@ -125,7 +127,7 @@
       <form>
         <h3>Newsletter</h3>
         <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never
-        send you spam or pass on your email address</p>
+          send you spam or pass on your email address</p>
         <input type="email" name="email" placeholder="write your email">
         <input type="submit" value="Subscribe">
       </form>
@@ -134,6 +136,9 @@
 
   <!-- end footer -->
 
-  
+  <script src="./main.js">
+
+  </script>
 </body>
+
 </html>
